--- a/second demo/app/components/app.html
+++ b/second demo/app/components/app.html
@@ -1,5 +1,5 @@
 <input [(ngModel)]="newTask" type="text">
 <button (click)="addTask(newTask)">Add</button>
 <ul>
-  <li *ngFor="#t of tasks">{{ t }}</li>
+  <li *ngFor="#t of tasks;#i=index" (click)="deleteTask(i)">{{ t }}</li>
 </ul>
